<resources>
    <string name="app_name">FruitLens</string>
    <string name="title_home">Home</string>
    <string name="title_detection">Deteksi</string>
    <string name="title_history">Riwayat</string>
    <string name="kuis">Mulai kuis yuk</string>
    <string name="imageQuiz">ImageQuiz</string>
    <string name="title">Kuis tebak buah</string>
    <string name="description">Mulai bermain kuis untuk menguji pengetahuanmu</string>
    <string name="title_name">Arafie</string>
    <string name="title_greetings">Hai, Arafie</string>
    <string name="camera">Kamera\n</string>
    <string name="gallery">Galeri</string>
    <string name="btn_detection">Deteksi gambar</string>
    <string name="question">Ini adalah pertanyaan ?</string>
    <string name="btn_answer1">Answer 1</string>
    <string name="btn_answer2">Answer 2</string>
    <string name="btn_answer3">Answer 3</string>
    <string name="btn_submit">Kirim jawaban</string>
    <string name="score">1/10</string>
    <string name="finished">Selesai</string>
    <string name="next_question">Lanjut ke pertanyaan selanjutnya</string>
    <string name="placeholder_email">Masukan email anda</string>
    <string name="placeholder_password">Masukan password anda</string>
    <string name="btn_login">Login</string>
    <string name="title_login">Daftar dulu, Yuk !</string>
    <string name="title_desc">Daftar untuk buat akun kamu</string>
    <string name="title_welcome">Hi, Selamat Datang</string>
    <string name="desc_signUp">Silahkan masuk ke akun kamu</string>
    <string name="placeholder_name">Masukan nama anda</string>
    <string name="btn_SignUp">SignUp</string>
    <string name="asked">Tidak punya akun ?</string>
    <string name="logout">Logout</string>
    <string name="tv_score">Score : 10</string>
    <string name="tv_result">7/10</string>
    <string name="tv_result_detection">Durian</string>
</resources>