<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detection.DetectionFragment">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="482dp"
        android:layout_height="354dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297"
        app:srcCompat="@drawable/ic_place_holder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gallery"
        style="?attr/borderlessButtonStyle"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/green_app"
        android:fontFamily="@font/inter_medium"
        android:padding="12sp"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_analyze"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_analyze"
        style="?attr/borderlessButtonStyle"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/green_app"
        android:fontFamily="@font/inter_medium"
        android:padding="12sp"
        android:text="@string/btn_detection"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_camera"
        style="?attr/borderlessButtonStyle"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/green_app"
        android:fontFamily="@font/inter_medium"
        android:padding="12sp"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_analyze"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>